Computer version complete

--- a/index.html
+++ b/index.html
@@ -57,6 +57,87 @@
         </div>
     </div>
 </section>
+<section id="Service">
+    <div class="mx-auto w-[100rem] text-center">
+        <div class="flex flex-col items-center justify-center mt-[8.6rem]">
+            <h1 class="text-[3rem] font-[600] text-darkGrayishBlue mb-[1.2rem]">Access Clipboard Anywhere</h1>
+            <p class="text-[1.2rem] inline-block text-grayishBlue">Whether you are on the go, or at your computer, you can access all your Clipboard <br>snippets in a few simple clicks.</p>
+            <img src="images/image-devices.png" alt="Devices" class="mt-[6.4rem]" >
+        </div>
+    </div>
+</section>
+<section id="Benefits">
+    <div class="mx-auto w-[100rem] text-center">
+        <div class="flex flex-col justify-center items-center  mb-[8.6rem] mt-[8.6rem] gap-[2.4rem]">
+            <div>
+                <h1 class="text-[3rem] font-[600] text-darkGrayishBlue mb-[1.2rem]">Supercharge your workflow</h1>
+                <p class="text-[1.2rem] inline-block text-grayishBlue">We've got the tools to boost your productivity.</p>
+            </div>
+            <div class="flex items-start justify-between my-[1.2rem] gap-[3.2rem]">
+              <div class="flex flex-col items-center justify-center">
+                <img src="images/icon-blacklist.svg" alt="Scroll" class="mb-[1.6rem]">
+                <h3 class="text-[1.2rem] font-[600] mb-[1.2rem]">Create Blacklists</h3>
+                <p class="text-grayishBlue">Easily search your snippets by content,<br> category, web address, application, and<br> more.</p>
+              </div>
+              <div class="flex flex-col items-center justify-center">
+                <img src="images/icon-text.svg" alt="Scroll" class="mb-[1.6rem]">
+                <h3 class="text-[1.2rem] font-[600] mb-[1.2rem]">Plain Text Snippets</h3>
+                <p class="text-grayishBlue">Remove unwanted formatting from copied<br> text for a consistent look.                </p>
+              </div>
+              <div class="flex flex-col items-center justify-center">
+                <img src="images/icon-preview.svg" alt="Scroll" class="mb-[1.6rem]">
+                <h3 class="text-[1.2rem] font-[600] mb-[1.2rem]">Sneak Preview</h3>
+                <p class="text-grayishBlue">Quick preview of all snippets on your<br> Clipboard for easy access.</p>
+              </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="Sponsors">
+ <div class="mx-auto w-[100rem] text-center">
+   <div class="flex justify-center items-center gap-[6.4rem] mb-[8.4rem]">
+    <img src="images/logo-google.png">
+    <img src="images/logo-vector-graphics.png">
+    <img src="images/logo-microsoft.png">
+    <img src="images/logo-ibm.png">
+    <img src="images/logo-hp.png">
+   </div>
+ </div>
+</section>
+<section id="CTA">
+    <div class="mx-auto w-[100rem] text-center">
+        <div class="flex flex-col gap-[1.2rem] justify-center items-center mb-[4.8rem]">
+            <h1 class="text-[3rem] font-[600] text-darkGrayishBlue mb-[1.2rem]">Clipboard for iOS and MacOS</h1>
+            <p class="text-[1.2rem] mb-[1.6rem] text-grayishBlue">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and<br> you're ready to start adding to your clipboard.</p>
+            <div class="flex items-center justify-center gap-[1.2rem]">
+                <button class="px-[2.4rem] py-[0.8rem] bg-strongCyan rounded-full hover:opacity-80 duration-500">
+                    <a class=" text-white text-[1.2rem]">Download for iOS</a>
+                </button>
+                <button class="px-[2.4rem] py-[0.8rem] bg-lightBlue rounded-full hover:opacity-80 duration-500">
+                    <a class=" text-white text-[1.2rem]">Download for Mac</a>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="Footer" class="bg bg-zinc-100">
+    <div class="mx-auto w-[100rem] text-center">
+        <div class="flex items-center justify-center gap-[7.4rem] py-[1.6rem]">
+            <img src="images/logo.svg" class="w-[5%]">
+            <div class="grid gap-x-[2.4rem] gap-y-[0.8rem] grid-cols-3 text-left ">
+                <a href="#" class="text-[1rem] text-grayishBlue hover:text-strongCyan duration-500">FAQs</a>
+                <a href="#" class="text-[1rem] text-grayishBlue hover:text-strongCyan duration-500">Privacy Policy</a>
+                <a href="#" class="text-[1rem] text-grayishBlue hover:text-strongCyan duration-500">Install Guide</a>
+                <a href="#" class="text-[1rem] text-grayishBlue hover:text-strongCyan duration-500">Contact Us</a>
+                <a href="#" class="text-[1rem] text-grayishBlue hover:text-strongCyan duration-500">Press Kit</a>
+            </div>
+            <div class="flex items-center justify-center gap-[1.2rem]">
+                <img src="images/icon-facebook.svg">
+                <img src="images/icon-instagram.svg">
+                <img src="images/icon-twitter.svg"
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
 <!-- - Font sizes (px)
